--- a/mystory.html
+++ b/mystory.html
@@ -11,12 +11,21 @@
 
 <body>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>My Story</li>
-            <li>About</li>
-            <li>Resume</li>
-        </ul>
+        <div class="container">
+            <div class="image">
+                <img src="images/logo.png" class="siteLogo">
+            </div>
+            <div>
+                <ul>
+                    <li>Home</li>
+                    <li>My Story</li>
+                    <li>About</li>
+                    <li>Resume</li>
+                </ul>
+            </div>
+        </div>
+        </div>
+
     </nav>
     <section>
         <h1>Willkomen! And Bievenue! Welcome!</h1>
