--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li class="inline-block"><a href="">Home</a></li>
-                <li class="inline-block"><a href="index.html">My Story</a></li>
+                <li class="inline-block"><a href="mystory.html">My Story</a></li>
                 <li class="inline-block"><a href="mywork.html">Case Studies</a></li>
                 <li class="inline-block">Resume</li>
             </ul>
