--- a/mystory.html
+++ b/mystory.html
@@ -17,9 +17,9 @@
             </div>
             <div>
                 <ul>
-                    <li>Home</li>
+                    <li><a href="index.html"></a>Home</li>
                     <li>My Story</li>
-                    <li>About</li>
+                    <li><a href="mywork.html"></a>Case Studies</li>
                     <li>Resume</li>
                 </ul>
             </div>
