--- a/mywork.html
+++ b/mywork.html
@@ -11,12 +11,19 @@
 
 <body>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>My Story</li>
-            <li>About</li>
-            <li>Resume</li>
-        </ul>
+        <div class="container">
+            <div class="image">
+                <img src="images/logo.png" class="siteLogo">
+            </div>
+            <div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="mystory.html">My Story</a></li>
+                    <li>Case Studies</li>
+                    <li>Resume</li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <section>
         <h1>Explore my work</h1>
