--- a/mywork.html
+++ b/mywork.html
@@ -28,7 +28,7 @@
     <section>
         <h1>Explore my work</h1>
 
-        <div class="flexcontainer">
+        <div id="flexContainer">
             <div class="travelspot">
                 <div><img src="images/Travelspot_phone.png"></div>
                 <div>
