--- a/mywork.html
+++ b/mywork.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="container">
             <div class="image">
-                <img src="images/logo.png" class="siteLogo">
+                <img src="images/spiralimage.png" class="siteLogo">
             </div>
             <div>
                 <ul>
@@ -37,6 +37,7 @@
                     <p>Building a brand new travel app from the ground up through extensive
                         user research, wire-framing, and prototyping </p>
                 </div>
+                <button type="button">Read More</button>
             </div>
             <div class="doi">
                 <div><img src="images/DOI_portfolio_image.png"></div>
@@ -58,6 +59,7 @@
                 </div>
             </div>
         </div>
+    </section>
 
 
 </body>
