--- a/index.html
+++ b/index.html
@@ -2,44 +2,38 @@
 <html>
 
 <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <title>Portfolio Coding</title>
+    <link href="css/style.css" rel="stylesheet" text="test/css">
+    <title>Jeffrey Marshak, Designer</title>
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="image">
-                <img src="images/logo.png">
-            </div>
-            <div class="text">
-                <p>Jeffrey Marshak</p>
-            </div>
-        </div>
-        <nav>
-            <ul>
-                <li class="inline-block"><a href="">Home</a></li>
-                <li class="inline-block"><a href="mystory.html">My Story</a></li>
-                <li class="inline-block"><a href="mywork.html">Case Studies</a></li>
-                <li class="inline-block">Resume</li>
-            </ul>
-        </nav>
-        </div>
-    </header>
-    <section>
-        <div class="aboutMe" <div class="image">
-            <img src="images/Headshot.png">
-            <div class="title">
-                <h1>Jeffrey Marshak</h1>
-                <h2>Classical Musician with a passion for visual design</h2>
-                <p>I'm an apsiring UX/UI desinger and professional oboist in Saint Paul, Minnesota
-                    taking a creative mind out of the orchestra onto the web. <br><br>
-                    I am agile, creative, and driven. I see the world through a visual lens drawn from
-                    arts and culture. I believe you cannot find a solution without knowing how to
-                    ask the right questions. Most importantly I am committed to creating experiences
-                    and products that are as useful as they are beautiful.</p>
-            </div>
-        </div>
-    </section>
+    <nav class="side-slide">
+        <ul>
+            <li><a href="mystory.html">My Story</a></li>
+            <li><a href="mywork.html">Case Studies</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="mailto:jeffrey.marshak82@gmail.com">Contact</a></li>
+        </ul>
+        <h3 class="nav01">x</h3>
+    </nav>
 
+    <div class="aboutMe">
+        <div class="title">
+            <h1>Jeffrey Marshak</h1>
+            <h2>Classical Musician with a passion for visual design</h2>
+            <p>I'm an apsiring UX/UI desinger and professional oboist in Saint Paul, Minnesota
+                taking a creative mind out of the orchestra onto the web. <br><br>
+                I am agile, creative, and driven. I see the world through a visual lens drawn from
+                arts and culture. I believe you cannot find a solution without knowing how to
+                ask the right questions. Most importantly I am committed to creating experiences
+                and products that are as useful as they are beautiful.</p>
+            <div>
+                <button class="btn01">Explore</button>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
+
+</html>
