--- a/mystory.html
+++ b/mystory.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="container">
             <div class="image">
-                <img src="images/logo.png" class="siteLogo">
+                <img src="images/spiralimage.png" class="siteLogo">
             </div>
             <div>
                 <ul>
