Home Page Final w/Fonts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <link href="css/style.css" rel="stylesheet" text="test/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
     <title>Jeffrey Marshak, Designer</title>
 </head>
 
