Final Updates after git crash

--- a/mywork.html
+++ b/mywork.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/mywork.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
     <title>My Work</title>
     <!-- Hotjar Tracking Code for https://jmarshak82.github.io/UX_UI_HW_18/ -->
     <script>
@@ -48,7 +51,7 @@
                     <p>Building a brand new travel app from the ground up through extensive
                         user research, wire-framing, and prototyping </p>
                 </div>
-                <button type="button">Read More</button>
+
             </div>
             <div class="doi">
                 <div><img src="images/DOI_portfolio_image.png"></div>
@@ -57,7 +60,9 @@
                     <h3>-User Research, Information Architecture, Visual Design</h3>
                     <p>Creating a user friendly and aesthetically appealing redesign of
                         the Department of the Interior website with a defined user path.</p>
+                    <a href="doi.html">Check it out!</a>
                 </div>
+
             </div>
 
             <div class="MRD">
